plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'ate'
version = '0.0.1-SNAPSHOT'
description = 'machineCare'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}
configurations {
    sql
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-data-jpa")
    implementation("org.springframework.boot:spring-boot-starter-security")
    runtimeOnly 'com.mysql:mysql-connector-j'
    testImplementation("org.springframework.boot:spring-boot-starter-test")
}

tasks.named('test') {
    useJUnitPlatform()
}
